--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,7 +60,7 @@
     }
 
     .button {
-        @apply py-4 px-16 border-none bg-primary-500 text-white hover:bg-primary-400 hover:text-dark transition-colors duration-200;
+        @apply py-4 px-16 border-none rounded-sm bg-primary-500 text-white hover:bg-primary-400 hover:text-dark transition-colors duration-200;
     }
 }
 
